--- a/CSS/style.css
+++ b/CSS/style.css
@@ -146,7 +146,7 @@ li.special-link:active  {
 h1#pikespeak {
     width: 90%;
     height: 370px;
-    background: url('../images/cs6.png') no-repeat left top;
+    background: url('../Images/cs6.png') no-repeat left top;
     background-size: 100% 100%;
     text-indent: -9999px;
     margin: 0 auto;
