--- a/CSS/style.css
+++ b/CSS/style.css
@@ -296,15 +296,15 @@ div#hours ul li#hours-top {
 /*HOVERING BOX SETTING ///////////////////////////////////////////////////*/
 #box {
     border: 1px solid black;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 150px;
     background-color: rgba(128, 0, 32, 1);
     border-radius: 50px;
     position: absolute;
 }
 @keyframes box {
-    from {background-color: rgba(128, 0, 32, .5); border-radius: 50px; top: 15%; left: 55%}
-    to {background-color: rgba(128, 0, 32, .25); border-radius: 100px; top: 25%; left: 65%}
+    from {background-color: rgba(128, 0, 32, .8); border-radius: 50px; top: 15%; left: 50%}
+    to {background-color: rgba(128, 0, 32, .25); border-radius: 100px; top: 25%; left: 60%}
 }
 #box {
     animation-name: box;
@@ -313,12 +313,8 @@ div#hours ul li#hours-top {
     animation-direction: alternate;
     animation-fill-mode: forwards;
 }
-#box h3 {
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    padding: 10px 0;
-    font-size: 25px;
+#box img {
+    margin-top: 1rem;
 }
 
 /*FOOTER SETTING ///////////////////////////////////////////////////*/
