--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,7 +182,7 @@ div#hours {
     margin-top: -10px;
     background: linear-gradient(rgba(128, 0, 32, 1),rgba(128, 0, 32, 0));
 }
-@media (max-width: 85rem) {
+/*@media (max-width: 85rem) {
     .classicborder {
         width: 90%;
     }
@@ -195,8 +195,11 @@ div#hours {
     .classicborder {
         min-height: 45rem;
     }
-}
-@media (max-width: 75rem) {
+}*/
+@media (max-width: 1200px) {
+    #innerbodyhome {
+        width: 90%;
+    }
     .classicborder {
         width: 100%;
         height: 65rem;
@@ -215,10 +218,6 @@ div#hours {
         width: 25%;
         margin-right: 1%;
     }
-    @keyframes box {
-    from {background-color: rgba(128, 0, 32, .8); border-radius: 50px; top: 15%; left: 30%}
-    to {background-color: rgba(128, 0, 32, .25); border-radius: 100px; top: 25%; left: 60%}
-}
 }
 @media (max-width: 300px) {
     #innerbodyhome {
@@ -307,8 +306,8 @@ div#hours ul li#hours-top {
     position: absolute;
 }
 @keyframes box {
-    from {background-color: rgba(128, 0, 32, .8); border-radius: 50px; top: 15%; left: 50%}
-    to {background-color: rgba(128, 0, 32, .25); border-radius: 100px; top: 25%; left: 60%}
+    from {background-color: rgba(128, 0, 32, .8); border-radius: 50px; top: 15%; left: 35%}
+    to {background-color: rgba(128, 0, 32, .25); border-radius: 100px; top: 25%; left: 45%}
 }
 #box {
     animation-name: box;
