phone resolution links update v1

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,6 +109,18 @@ header#toplinks {
         padding: 0 15px;
     }
 }
+@media (max-width: 400px) {
+    #toplinks ul {
+        width: 100%;
+        margin: 0;
+        padding: 15px 0;
+    }
+    #toplinks ul li {
+        padding: 15px 0;
+        margin: 0 4px;
+        box-sizing: border-box;
+    }
+}
 /*NAVIGATION BAR////////////////////////////////////////////////////////////////*/
 nav ul {
     list-style: none;
