--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,7 +109,7 @@ header#toplinks {
         padding: 0 15px;
     }
 }
-@media (max-width: 400px) {
+@media (max-width: 390px) {
     #toplinks ul {
         width: 100%;
         margin: 0;
@@ -117,7 +117,7 @@ header#toplinks {
     }
     #toplinks ul li {
         padding: 15px 0;
-        margin: 0 4px;
+        margin: 0;
         box-sizing: border-box;
     }
 }
