--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,6 +119,7 @@ header#toplinks {
         padding: 15px 0;
         margin: 0;
         box-sizing: border-box;
+        font-size: 15px;
     }
 }
 /*NAVIGATION BAR////////////////////////////////////////////////////////////////*/
