--- a/CSS/style.css
+++ b/CSS/style.css
@@ -989,6 +989,26 @@ textarea {
         width: 60%;
     }
 }
+@media (max-width:400px) {
+    #contactcompanyinfo {
+        width: 100%;
+        margin: 0;
+        height: 32rem;
+    }
+    #contactcompanyinfo p {
+        margin: 10px 0 0;
+    }
+    .contactMap {
+        width: 100%;
+    }
+    section#contactform {
+        margin: 0;
+        width: 100%;
+    }
+    #contactComment {
+        width: 90%;
+    }
+}
 /*GALLERY STYLING//////////////////////////////////////////////*/
 .galleryinfo {
     margin: 30px auto 10px auto;
@@ -1069,5 +1089,21 @@ table tr td img {
 @media (max-width: 75rem) {
     .classicborder {
         width: 100%;
+    }
+    #innerbody {
+        width: 90%;
+    }
+}
+@media (max-width:400px) {
+    .classicborder {
+        min-height: 87rem;
+    }
+    #aboutpicture {
+        display: none;
+    }
+    #aboutsection {
+        width: 100%;
+        float: none;
+        margin: 0;
     }
 }
