--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,19 @@ body {
     margin: 0;
     z-index: 2;
 }
-#innerbody {
+#innerbodyabout {
     width: 80%;
     background: rgba(128, 0, 32, .75);
     margin: 0 auto;
     min-height: 800px;
     box-shadow: 0 0 10px rgba(128, 0, 32, 1);
+}
+#innerbodycontact {
+    width: 80%;
+    background: rgba(128, 0, 32, .75);
+    margin: 0 auto;
+    min-height: 800px;
+    box-shadow: 0 0 10px rgba(128, 0, 32, 1);  
 }
 #innerbodyhome {
     width: 80%;
@@ -228,8 +235,9 @@ div#hours {
         width: 95%;
         height: 800px;
     }
-    #innerbody {
+    #innerbodyabout {
         width: 95%;
+        height: 1200px;
     }
     #Nametop h1 {
         font-size: 17px;
@@ -994,6 +1002,16 @@ textarea {
     }
     #contactComment {
         width: 90%;
+    }
+    #contactinfo {
+        height: 1400px;
+    }
+    #innerbodycontact {
+        width: 95%;
+        height: 1400px;
+    }
+    #contactform {
+        margin-top: 100rem;
     }
 }
 /*GALLERY STYLING//////////////////////////////////////////////*/
