--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,7 +33,8 @@ body {
     width: 80%;
     background: rgba(128, 0, 32, .75);
     margin: 0 auto;
-    min-height: 600px;
+    min-height: 200px;
+    overflow: hidden;
     box-shadow: 0 0 10px rgba(128, 0, 32, 1);
 }
 /*TITLE STYLING*/
