--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ body {
     background: rgba(128, 0, 32, .75);
     margin: 0 auto;
     min-height: 200px;
-    overflow: hidden;
+    overflow: auto;
     box-shadow: 0 0 10px rgba(128, 0, 32, 1);
 }
 /*TITLE STYLING*/
