--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,7 +189,7 @@ h1#pikespeak {
     background: linear-gradient(rgba(128, 0, 32, 1),rgba(128, 0, 32, 0));
     border-top: 1px solid black;
     box-sizing: border-box;
-    height: 50rem;
+    min-height: 55rem;
     max-height: 100%;
 }
 section#welcome {
